[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Snake2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Snake/Snake.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.61712, 6.70132 )

[node name="Snake2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 192, 0, 64, 64 )

[node name="move_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="colisor" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisor"]
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 9.35
spread = 135.9
gravity = Vector2( 0, 98 )
initial_velocity = 20.0
color = Color( 0.0352941, 0.929412, 0.0705882, 1 )

[node name="tempo_morrer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 960
limit_smoothed = true
smoothing_enabled = true
